# SCP

./: README.md  scp.c  scp.h
docs/English/: UserGuide.md
docs/中文/: README中文.md  使用手册.md
test/: analyze_scp.py
test/nodeA/: CMakeLists.txt
test/nodeA/include/: scp_time.h
test/nodeA/src/: main.c  scp_time.c
test/nodeB/: CMakeLists.txt
test/nodeB/src/: main.c
